# AI_Project_DataVision

./: .gitignore  README.md  backend_main.py  excel.py  frontend_main.py  modeltest.py  pyproject.toml  requirements.txt  visualize.py
