[tool.poetry]
name = "ai-project-datavision"
version = "0.1.0"
description = ""
authors = ["DripCharacter <wsms8646@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_project_datavision"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
openpyxl = "^3.1.2"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
streamlit = "^1.22.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
